<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_margin="5dp"
    card_view:cardCornerRadius="10dp"
    card_view:cardElevation="5dp"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/srno"/>
                <TextView
                    android:id="@+id/srNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/brachs"/>
                <TextView
                    android:id="@+id/brch_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/item"/>
                <TextView
                    android:id="@+id/item_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone">
                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/unit"/>
                <TextView
                    android:id="@+id/unit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/stks"/>
                <TextView
                    android:id="@+id/stk"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone">
                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/to_stks"/>
                <TextView
                    android:id="@+id/to_stk"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/qty"/>
                <AutoCompleteTextView
                    android:id="@+id/qty"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:layout_weight="0.5"
                    android:maxLines="1"/>
                <Button
                    android:id="@+id/djqty"
                    android:layout_width="23dp"
                    android:layout_height="30dp"
                    android:text="Adj.Qty"
                    android:layout_weight="1"
                    android:background="@drawable/button_corner"
                    android:textColor="#FFFFFF"
                    android:textAllCaps="false"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/location"/>
                <TextView
                    android:id="@+id/location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/t_no"/>
                <TextView
                    android:id="@+id/ton_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/aws_class"/>
                <TextView
                    android:id="@+id/aws_class"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/item_listss"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>
    </LinearLayout>
    <TextView
        android:id="@+id/conform"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|end"
        android:layout_margin="5dp"
        android:text="Confirm"
        android:visibility="gone"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/myCheckBox"
        android:layout_gravity="top|end"
        android:layout_margin="5dp"/>
</android.support.v7.widget.CardView>