<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main"
    android:layout_margin="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ScrollView
            android:id="@+id/ss1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            android:visibility="gone">
            <android.support.v7.widget.CardView
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="4dp"
                card_view:cardElevation="4dp"
                card_view:cardMaxElevation="4dp"
                android:layout_marginBottom="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start|center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="10dp"
                            android:text="@string/t_no"
                            android:layout_marginEnd="10dp" />

                        <EditText
                            android:id="@+id/to_no"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textCapWords"
                            android:hint="@string/t_no"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start|center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="10dp"
                            android:text="@string/c_location"
                            android:layout_marginEnd="10dp" />

                        <EditText
                            android:id="@+id/co_loc"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"
                            android:focusable="false"

                            android:hint="@string/c_location" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start|center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="10dp"
                            android:text="@string/qty_pro_no"
                            android:layout_marginEnd="10dp" />

                        <EditText
                            android:id="@+id/qulity_poj_no"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textCapWords"
                            android:hint="@string/qty_pro_no1"
                            />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start|center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="10dp"
                            android:text="@string/seam_no"
                            android:layout_marginEnd="10dp" />

                        <EditText
                            android:id="@+id/seam_no"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/seam_no"
                            android:inputType="number"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start|center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="10dp"
                            android:text="@string/aws_class"
                            android:layout_marginEnd="10dp" />

                        <EditText
                            android:id="@+id/aws_class"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textCapWords"
                            android:hint="@string/aws_class" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start|center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="10dp"
                            android:text="@string/shop"
                            android:layout_marginEnd="10dp" />

                        <EditText
                            android:id="@+id/shop"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textCapWords"
                            android:focusable="false"

                            android:hint="@string/shop" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start|center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="10dp"
                            android:text="@string/station"
                            android:layout_marginEnd="10dp" />

                        <EditText
                            android:id="@+id/station"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textCapWords"
                            android:focusable="false"

                            android:hint="@string/station" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start|center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="10dp"
                            android:text="@string/welder_psno"
                            android:layout_marginEnd="10dp" />

                        <EditText
                            android:id="@+id/welder_psno"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textCapWords"
                            android:hint="@string/welder_psno"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start|center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="10dp"
                            android:text="@string/date_time"
                            android:layout_marginEnd="10dp" />

                        <EditText
                            android:id="@+id/date_time"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusable="false"

                            android:hint="@string/date_time"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start|center"
                        android:orientation="horizontal"
                        android:layout_marginBottom="25dp">

                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="10dp"
                            android:text="@string/sequence_no"
                            android:layout_marginEnd="10dp" />

                        <EditText
                            android:id="@+id/seq_no"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:focusable="false"

                            android:hint="@string/sequence_no"/>
                    </LinearLayout>
                </LinearLayout>


            </android.support.v7.widget.CardView>
        </ScrollView>
    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="QR Scan" />

</RelativeLayout>